changed the navbar

--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
             <div class="col-lg-3"><h2>Morgan Dorfman</h2></div>
             <div class="col-lg-9">
               <nav
-                class="navbar navbar-expand-lg navbar-light bg-light text-right"
+                class="float-right navbar navbar-expand-lg navbar-light bg-light text-right"
               >
-                <a class="navbar-brand" href="#">Navbar</a>
+                
                 <button
                   class="navbar-toggler"
                   type="button"
