--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <div class="col-lg-3"><h2>Morgan Dorfman</h2></div>
         <div class="col-lg-9">
           <nav
-            class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-end"
+            class="float-right navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-end"
           >
-            <a class="navbar-brand" href="#">Navbar</a>
             <button
               class="navbar-toggler"
               type="button"
