--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
   <body>
       <div class="container page-header">
           <div class="row">
-            <div class="col-lg-3"><h2>Morgan Dorfman</h2></div>
-            <div class="col-lg-9">
+            <div class="col-lg-3 col-sm-6"><h2>Morgan Dorfman</h2></div>
+            <div class="col-lg-9 col-sm-6">
               <nav
                 class="float-right navbar navbar-expand-lg navbar-light bg-light text-right"
               >
@@ -47,7 +47,7 @@
           </div>
           <br />
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-sm-12">
     <div class="input-group mb-3">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">Name</span>
@@ -58,7 +58,7 @@
       <div class="col-lg-6"></div>
       </div>
   <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-sm-12">
     <div class="input-group mb-3">
         <div class="input-group-prepend">
           <span class="input-group-text" id="basic-addon1">Email</span>
@@ -69,7 +69,7 @@
       <div class="col-lg-6"></div>
       </div>
 <div class="row">
-  <div class="col-lg-6">
+  <div class="col-lg-6 col-sm-12">
       <div class="input-group">
           <div class="input-group-prepend">
             <span class="input-group-text">Message</span>
