believe to be the final version

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="row fixed-bottom">
-        <div class="col-lg-12">
+        <div class="col-lg-12 col-sm-12">
           <!-- Footer -->
           <footer class="page-footer font-small footerColor">
             <!-- Copyright -->
