--- a/portfolio.html
+++ b/portfolio.html
@@ -47,10 +47,10 @@
       <br />
       <div class="row">
         <div class="col-lg-3"></div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-12 margin">
           <div class="image-one"><div id="projectOne">Project One</div></div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-12">
           <div class="image-two"><div id="projectTwo">Project Two</div></div>
         </div>
         <div class="col-lg-3"></div>
@@ -58,19 +58,20 @@
       <br />
       <div class="row">
         <div class="col-lg-3"></div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-12 margin">
           <div class="image-three">
             <div id="projectThree">Project Three</div>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-sm-12 margin">
           <div class="image-four"><div id="projectFour">Project Four</div></div>
         </div>
         <div class="col-lg-3"></div>
 
         <br />
+        <br />
         <div class="row fixed-bottom align-items-center">
-          <div class="col-12">
+          <div class="col-lg-12 col-sm-12">
             <!-- Footer -->
             <footer class="page-footer font-small footerColor">
               <!-- Copyright -->
