--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
         </div>
         <div class="col-lg-8">
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores
-            excepturi aliquid eius pariatur in reprehenderit dolorum, ipsam quas
-            quae sunt porro, natus, dolorem modi temporibus adipisci ad.
-            Nostrum, inventore expedita.
+            I'm Morgan and I graduated from Rutgers Business School in 2015 with
+            a B.S. in Finance. I currently work for a publishing company as a
+            forecasting and merchandising analyst. I enjoy playing video games,
+            watching movies, museums and traveling. I am currently enrolled in a
+            full-stack development bootcamp at Columbia University. I would like
+            to follow this passion I have for development and turn it into a
+            successful career.
           </p>
         </div>
       </div>
